@@ -1,5 +1,0 @@
-=============================
- Ansel Development TODO List
-=============================
-
-:Contact:       ansel@lists.horde.org
