@@ -10,12 +10,12 @@
  * Horde_Release::FOCUS_MAJORSECURITY - Major security fixes
  * Horde_Release::FOCUS_DOCS - Documentation improvements
  */
-$this->notes['fm']['focus'] = array(Horde_Release::FOCUS_MINORBUG);
+$this->notes['fm']['focus'] = array(Horde_Release::FOCUS_MAJORFEATURE);
 
 /* Mailing list release notes. */
 $this->notes['ml']['changes'] = <<<ML
-The Horde Team is pleased to announce the first release candidate of the Ansel
-Photo Management and Web Gallery application version H5 (3.0.0).
+The Horde Team is pleased to announce the final release of the Ansel Photo
+Management and Web Gallery application version H5 (3.0.0).
 
 Ansel is a full featured photo management application. With it, you can
 organize your photos in any number of galleries and subgalleries, share
@@ -26,16 +26,15 @@ http://www.horde.org/apps/ansel.
 For detailed installation and configuration instructions, please see
 http://www.horde.org/apps/ansel/docs/INSTALL
 
-Testing is requested and comments are encouraged.
-Updated translations would also be great.
-
-Major changes compared to the Ansel version H5 (3.0.0beta1) are:
-    * Small bugfixes.
+Major changes compared to the Ansel H4 versions are:
+    * Compatible with Horde 5.
+    * Improved support for SQLite.
 ML;
 
 /* Freshmeat release notes, not more than 600 characters. */
 $this->notes['fm']['changes'] = <<<FM
-Small bugfixes.
+Compatible with Horde 5.
+Improved support for SQLite.
 FM;
 
 $this->notes['name'] = 'Ansel';
